[package]
name = "snoomark"
version = "1.0.3"
authors = ["Shaq Johnson <shaq@reddit.com>", "Zean Tsoi <zean@reddit.com>"]
description = "A fork of GitHub's comrak CommonMark parser with Reddit flavor."
homepage = "https://github.com/reddit/snoomark"
repository = "https://github.com/reddit/snoomark"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "BSD-2-Clause"
categories = ["text-processing", "parsing", "command-line-utilities"]

[badges]
travis-ci = { repository = "kivikakk/comrak" }

[profile.release]
lto = true

[[bin]]
name = "comrak"
required-features = ["clap"]
doc = false

[dependencies]
typed-arena = "1.2.0"
regex = "0.2.1"
lazy_static = "0.2.4"
entities = "1.0.0"
unicode_categories = "0.1.1"
clap = { version = "2.22.2", optional = true }
clippy = { version = "~0.0.123", optional = true }
libc = "0.2.23"
serde_json = "1.0"
twoway = "0.1"
pest = "1.0"
pest_derive = "1.0"

[features]
default = ["clap"]
dev = ["clap", "clippy"]

[lib]
name = "snoomark"
crate-type = ["cdylib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
version = "0.1"
default-features = false
features = ["python27-sys", "extension-module-2-7"]
