[package]
name = "snoomark"
version = "1.1.8"
authors = ["Ashe Connor <kivikakk@github.com>", "Shaq Johnson <shaq@reddit.com>", "Zean Tsoi <zean@reddit.com>"]
description = "A fork of GitHub's comrak CommonMark parser with Reddit flavor."
homepage = "https://github.com/reddit/snoomark"
repository = "https://github.com/reddit/snoomark"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "BSD-2-Clause"
categories = ["text-processing", "parsing", "command-line-utilities"]

[profile.release]
lto = true

[[bin]]
name = "snoomark"
required-features = ["clap"]
doc = false

[lib]
name = "snoomark"
crate-type = ["cdylib", "rlib"]

[dependencies]
typed-arena = "1.2.0"
regex = "0.2.1"
lazy_static = "0.2.4"
entities = "1.0.0"
unicode_categories = "0.1.1"
clap = { version = "2.22.2", optional = true }
clippy = { version = "~0.0.123", optional = true }
twoway = "0.1"
pest = "1.0"
pest_derive = "1.0"
flame = { version = "0.2.2", optional = true }
flamer = { version = "^0.2.1", optional = true }
memchr = "2.0.1"

[dev-dependencies]
timebomb = "0.1.2"

[features]
default = ["clap", "cpython", "cpython/extension-module-2-7"]
dev = ["clap", "clippy", "cpython", "cpython/extension-module-2-7"]
flamegraphs = ["flame", "flamer", "cpython/extension-module-2-7"]
minflame = ["flame", "flamer", "cpython/extension-module-2-7"]
benchmarks = []

[dependencies.cpython]
version = "0.2.0"
default-features = false
features = ["python27-sys"]
optional = true
